<resources>
    <string name="app_name">CoffeeApp</string>
    <string name="todo">TODO</string>
    <string name="choose_toppings">Choose Toppings</string>
    <string name="chocolate">Chocolate</string>
    <string name="cream">Cream</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="order">Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="orderfinal">order summary will be here</string>
</resources>